# dockerPractice

./: Dockerfile  Queue.py  QuickStart+.py  QuickStart.py  README.md  RestfulQuickStart.py  app.py  compose.yaml  jobs  jobs_big  jobs_small  pyproject.toml  pytesting.py  test.py
.pytest_cache/v/cache/: lastfailed  nodeids
