[tool.poetry]
name = "practice"
version = "1.0.0"
description = "test"
authors = ["Seth Cox <sethcox12345@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^3.0.3"
pytest = "^8.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
